@@ -70,9 +70,13 @@ install: create-dirs create-service-dir
 	install -m 754 lfs/sysconfig/network-devices/ifdown          ${EXTDIR}/sysconfig/network-devices
 	install -m 754 lfs/sysconfig/network-devices/services/static ${EXTDIR}/sysconfig/network-devices/services
 
+install-hotplug: create-dirs
+	install -m 754 contrib/init.d/hotplug ${EXTDIR}/rc.d/init.d
+	ln -sf ../init.d/hotplug ${EXTDIR}/rc.d/rcsysinit.d/S55hotplug
+
 install-modules: create-dirs
 	install -m 754 contrib/init.d/modules ${EXTDIR}/rc.d/init.d
 	install -m 644 contrib/sysconfig/modules ${EXTDIR}/rc.d/sysconfig
-	ln -sf  ../init.d/modules ${EXTDIR}/rc.d/rcsysinit.d/S15modules
+	ln -sf ../init.d/modules ${EXTDIR}/rc.d/rcsysinit.d/S57modules
 
-.PHONY: all create-dirs create-service-dir install install-modules
+.PHONY: all create-dirs create-service-dir install install-hotplug install-modules
